<resources>
    <string name="app_name">FoodApplicationKot</string>
    <string name="login">Login</string>
    <string name="continue_with">Continue With</string>
    <string name="or">or</string>
    <string name="waves_of_food">Waves of Food</string>
    <string name="delivery_favourite_food">Delivery Favourite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id" />
</resources>