<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waves of Food"
        android:textSize="20sp"
        android:textColor="#09B44C"
        android:fontFamily="@font/amaranth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_marginTop="3dp"
        android:text="@string/delivery_favourite_food"
        android:textSize="15sp"
        android:textColor="#09B44C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textSize="20sp"
        android:textColor="#09B44C"
         android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/emailadd"
        android:layout_width="325dp"
        android:layout_height="57dp"
         android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:hint="Email"
        android:background="@drawable/edit_bg"
        android:inputType="textEmailAddress"
        android:textColorHint="#808080"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/passworrd"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:background="@drawable/edit_bg"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailadd"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="65dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passworrd"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/continue_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

<!--    <Button-->
<!--        android:id="@+id/button7"-->
<!--        android:layout_width="132dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:layout_marginStart="72dp"-->
<!--        android:text="Button"-->
<!--        android:background="@color/white"-->
<!--       android:drawableLeft="@drawable/b"-->
<!--        android:backgroundTint="@drawable/white_btn"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView8"-->
<!--        app:layout_constraintVertical_bias="0.222" />-->

<!--    <Button-->
<!--        android:id="@+id/button8"-->
<!--        android:layout_width="132dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:layout_marginEnd="52dp"-->
<!--        android:drawableLeft="@drawable/gp"-->
<!--        android:text="Button"-->
<!--        android:background="@drawable/white_btn"-->
<!--        android:backgroundTint="@color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"-->
<!--        app:layout_constraintVertical_bias="0.353" />-->


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookbtn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/white_btn"
        android:drawableLeft="@drawable/b"
        android:paddingLeft="10dp"
        android:text="Facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.173" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleBtn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_btn"
        android:drawableLeft="@drawable/gp"
        android:paddingLeft="10dp"
        android:text="Google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facebookbtn"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.006" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:background="@drawable/redbutton"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/donthavebtn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Don't Have An Account?"
        android:textColor="#09B44C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.303" />
</androidx.constraintlayout.widget.ConstraintLayout>